<resources>
    <string name="app_name">Aston5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_1">Иванов Иван</string>
    <string name="_7_966_453_25_15">+7(966)453-25-15</string>
    <string name="contact_2">Павел Дуров</string>
    <string name="_7_474_646_53_43">+7(474)646-53-43</string>
    <string name="contact_3">Евгения Мальцева</string>
    <string name="_7_553_535_88_55">+7(553)535-88-55</string>
    <string name="name">Name</string>
    <string name="edit_contact">Редактировать</string>
    <string name="new_number">Введите новый номер телефона</string>
    <string name="save">СОХРАНИТЬ</string>
</resources>